met two stretch goals(fixed nav bar with opacity, css animation)

--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,50 @@ table {
 html {
   font-size: 62.5%;
 }
+#fade {
+  animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  /* Firefox */
+  -webkit-animation: fadein 2s;
+  /* Safari and Chrome */
+  -o-animation: fadein 2s;
+  /* Opera */
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadein {
+  /* Firefox */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadein {
+  /* Safari and Chrome */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-o-keyframes fadein {
+  /* Opera */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
@@ -169,8 +213,10 @@ nav {
   width: 100%;
   text-align: center;
   font-size: 1.5em;
-  background-color: #F6F6F6;
-  padding-bottom: 2%;
+  background: rgba(246, 246, 246, 0.9);
+  padding-bottom: 1%;
+  padding-top: 1%;
+  position: fixed;
 }
 nav h1 {
   font-size: 3em;
@@ -209,6 +255,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  padding-top: 8.7%;
 }
 .home .intro h2 {
   padding: 15px;
