--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,8 +5,10 @@ nav {
     width: 100%;
     text-align: center;
     font-size: 1.5em;
-    background-color: @nav-bg;
-    padding-bottom: 2%;
+    background: @nav-bg;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    position: fixed;
     h1 {
         font-size: 3em;
     }
