--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 // Variables
 
 // Color pointers
-@nav-bg: @wild-sand;
+@nav-bg: rgba(246,246,246,0.9);
 @nav-font: @river-bend;
 @nav-border: @sea-shell;
 
